fix bug where required-popup is hidden on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -713,8 +713,7 @@ body {
     width: 325px;
   }
   #required-popup {
-    top: 110px;
-    bottom: auto;
+    bottom: -25px;
   }
   /*.list-item-container {*/
     /*overflow-y: scroll; !* has to be scroll, not auto *!*/
